https://bugs.webkit.org/show_bug.cgi?id=70207 After deleting __defineSetter__, it is absent but appears in name list

Reviewed by Darin Adler.

Source/JavaScriptCore:

* runtime/JSObject.cpp:
(JSC::JSObject::getOwnPropertyNames):
    - This should check whether static functions have been reified.

LayoutTests:

* fast/js/delete-syntax-expected.txt:
* fast/js/script-tests/delete-syntax.js:
    - Added test case for getOwnPropertyNames.



Canonical link: https://commits.webkit.org/86382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97655 268f45cc-cd09-0410-ab3c-d52691b4dbfc