LayoutTests/fast/js/script-tests/delete-syntax.js
@@ -68,5 +68,9 @@ shouldBe("RegExp.prototype.compile", "regExpPrototypeCompile");
 shouldBe("RegExp.prototype.exec", "undefined");
 shouldBe("RegExp.prototype.test", "null");
 
+// Check that once a property is deleted its name is removed from the property name array.
+delete Object.prototype.__defineSetter__;
+shouldBe("String(Object.getOwnPropertyNames(Object.prototype))", '"constructor,valueOf,__lookupGetter__,toLocaleString,__defineGetter__,hasOwnProperty,propertyIsEnumerable,toString,__lookupSetter__,isPrototypeOf"');
+
 var successfullyParsed = true;
 
